nuevos endpoint filiacion, parametros
